--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,18 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container text-center align-items-center">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body align-items-center">
-          <span class="top">&spades;</span>
-          <span class="number">7</span>
-          <span class="footer">&spades;</span>
+    <div class="container">
+      <div class="card mt-5" style="width: 18rem;">
+        <div class="card-body align-middle fs-1">
+          <div class="row text-start">
+            <span class="top"><!--top-icon--></span>
+          </div>
+          <div class="row text-center">
+            <span class="number"><!--card-number/letter--></span>
+          </div>
+          <div class="row text-end">
+            <span class="footer"><!--bottom-icon--></span>
+          </div>
         </div>
       </div>
     </div>
