--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,11 @@
   </head>
   <body>
     <div class="container">
-      <div class="card mt-5" style="width: 18rem;">
-        <div class="card-body align-middle fs-1">
+      <div
+        class="card d-flex justify-content-center mt-5"
+        style="width: 18rem;"
+      >
+        <div class="card-body display-1">
           <div class="row text-start">
             <span class="top"><!--top-icon--></span>
           </div>
